# SledgehammerEngine-v1.0

./: CMakeLists.txt  imgui.ini
assets/: config.json  settings.json  world_config.json
assets/characters/: TestKnight.character.json  ghost_swordsman.character.json
assets/locale/: en_US.json  zh_CN.json
assets/shaders/: sprite.vert.msl  sprite.vert.spv
assets/textures/Actors/: GhostSwordsman.sm.json  TestKnight.frame.json  TestKnight.sm.json
assets/textures/Characters/: gundom.frame.json
docs/: STATE_MACHINE_INTERFACE.md
src/: main.cpp
src/engine/actor/: actor_manager.cpp
src/engine/component/: controller_component.cpp  controller_component.h  parallax_component.cpp  parallax_component.h  sprite_component.cpp  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h
src/engine/core/: config.h  context.cpp  context.h  game_app.cpp  game_app.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/object/: game_object.h
src/engine/physics/: physics_manager.cpp  physics_manager.h
src/engine/render/: camera.cpp  camera.h  opengl_renderer.cpp  opengl_renderer.h  parallax_render_system.cpp  render_types.h  renderer.h  sdl3_gpu_renderer.cpp  sdl3_gpu_renderer.h  sdl_renderer.cpp  sdl_renderer.h  sprite.h  sprite_render_system.cpp  tilelayer_render_system.cpp  tilelayer_render_system.h  vulkan_renderer.cpp  vulkan_renderer.h
src/engine/resource/: resource_manager.cpp  resource_manager.h  texture_manager.cpp
src/engine/scene/: leve_loader.cpp  leve_loader.h  level_loader.cpp  level_loader.h
src/engine/shaders/: sprite.frag  sprite.vert
src/engine/statemachine/: input_buffer.cpp  input_buffer.h  sm_loader.cpp  sm_loader.h  sm_types.h  state_controller.cpp  state_controller.h
src/engine/world/: biome.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  perlin_noise_generator.cpp  perlin_noise_generator.h  terrain_generator.cpp  terrain_generator.h  tile_info.h  world_config.cpp  world_config.h
src/game/inventory/: inventory.cpp  inventory.h
src/game/locale/: locale_manager.cpp  locale_manager.h
src/game/mission/: planet_mission_ui.cpp  planet_mission_ui.h
src/game/monster/: monster_manager.cpp  monster_manager.h
src/game/route/: route_data.cpp  route_data.h
src/game/scene/: character_editor_scene.cpp  frame_editor.cpp  game_scene.cpp  game_scene.h  game_scene_editor.cpp  menu_scene.cpp  menu_scene.h  route_select_scene.cpp  route_select_scene.h  state_machine_editor.cpp  state_machine_editor.h  voxel_scene.cpp  voxel_scene.h
src/game/statemachine/: character_sm_setup.h  ghost_swordsman_example.cpp  ghost_swordsman_sm.cpp  sm_loader.cpp  sm_loader.h
src/game/weapon/: weapon.cpp  weapon.h
src/game/weather/: weather_system.cpp  weather_system.h
src/game/world/: tree_manager.cpp  tree_manager.h
